[package]
name = "libos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "os"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0"
spinlock = { path = "../crates/spinlock" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
x2apic = "0.4"
raw-cpuid = "10.7"
